[package]
name = "turn"
version = "0.8.0"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2021"
description = "A pure Rust implementation of TURN"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/turn"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/turn"

[dependencies]
async-trait = "0.1"
base64 = "0.21"
bytes = "1"
crc = "3"
futures = "0.3"
lazy_static = "1.4"
libc = "0.2.126"
log = "0.4"
md-5 = "0.10"
rand = "0.8"
ring = "0.17"
subtle = "2.4"
thiserror = "1"
tokio-util = { version = "0.7.11", features = ["codec"]}
tokio = { version = "1.32.0", features = [
    "fs",
    "io-util",
    "io-std",
    "macros",
    "net",
    "parking_lot",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
url = "2"

[dev-dependencies]
async-global-executor = "2"
chrono = "0.4.28"
clap = "3"
criterion = { version = "0.5", features = ["async_futures"] }
env_logger = "0.10"
hex = "0.4"
tokio-test = "0.4"

[features]
metrics = []

[[example]]
name = "turn_server_udp"
path = "examples/turn_server_udp.rs"
bench = false
